# ntomb

./: .gitignore  Cargo.toml  LICENSE  README.md  mockup.py
.github/: release.yml
.github/workflows/: build.yml  checks.yml  release-github.yml  release.yml
.kiro/hooks/: manual-docs-refresh.kiro.hook  manual-spec-sync.kiro.hook  spec-sync.kiro.hook  suspicious-docs.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/: network_map.yaml  suspicious_detection.yaml  visual-design.md
.kiro/specs/code-refactoring/: design.md  requirements.md  tasks.md
.kiro/specs/configurable-refresh/: design.md  requirements.md  tasks.md
.kiro/specs/graveyard-adaptive-layout/: design.md  requirements.md  tasks.md
.kiro/specs/ntomb-core/: design.md  requirements.md  tasks.md
.kiro/specs/ntomb-graveyard-vfx/: design.md  requirements.md  tasks.md
.kiro/specs/process-focus/: design.md  requirements.md  tasks.md
.kiro/specs/ui-skeleton/: design.md  requirements.md  tasks.md
.kiro/steering/: ntomb-coding-style.md  security-domain.md  visual-design.md
docs/: ntomb-mcp.md
examples/: test_netstat.rs
ntomb_mcp/: __init__.py  __main__.py  detection_rules.py  requirements.txt  server.py
src/: app.rs  main.rs  ui.rs
src/app/: config.rs  event.rs  mod.rs
src/net/: mod.rs
src/procfs/: mod.rs
src/theme/: default.rs  mod.rs  overdrive.rs
src/ui/: banner.rs  emoji_width.rs  graveyard.rs  grimoire.rs  inspector.rs  mod.rs  status_bar.rs
