[package]
name = "ntomb"
version = "0.6.66"
edition = "2021"
description = "Network Tomb: Process-centric network visualization with Halloween theme"
authors = ["Kiroween Hackathon"]
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.29"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
netstat2 = "0.11.2"

# System info (cross-platform process info)
sysinfo = "0.37"

[[bin]]
name = "ntomb"
path = "src/main.rs"

[dev-dependencies]
proptest = "1.5"

[profile.release]
opt-level = 3
lto = true
strip = true
