[package]
name = "ntomb"
version = "0.0.1"
edition = "2021"
rust-version = "1.74"
description = "Network Tomb: Process-centric network visualization with Halloween theme"
authors = ["JIHUNKIM <jihunkimkw@gmail.com>"]
license = "MIT"
repository = "https://github.com/shblue21/ntomb"
homepage = "https://github.com/shblue21/ntomb"
documentation = "https://github.com/shblue21/ntomb#readme"
readme = "README.md"
keywords = ["network", "monitoring", "tui", "security", "visualization"]
categories = ["command-line-utilities", "network-programming", "visualization"]
exclude = [
    "target/",
    ".git/",
    ".github/",
    "*.png",
    "docs/screenshots/"
]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.29"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
netstat2 = "0.11.2"

# System info (cross-platform process info)
sysinfo = "0.37"

# Unicode character width calculation (matches ratatui's dependency)
unicode-width = "0.2.0"

[[bin]]
name = "ntomb"
path = "src/main.rs"

[dev-dependencies]
proptest = "1.5"

[profile.release]
opt-level = 3
lto = true
strip = true

# DEB package metadata (Ubuntu/Debian)
[package.metadata.deb]
maintainer = "JIHUNKIM <jihunkimkw@gmail.com>"
copyright = "2025, JIHUNKIM"
license-file = ["LICENSE", "0"]
extended-description = """
ntomb is a terminal-based monitoring tool that visualizes network 
connections on Linux systems in real-time. Unlike traditional tools 
like netstat and ss, ntomb presents connections through a Halloween-themed 
graphical interface with coffins, ghosts, and pumpkins."""
section = "utility"
priority = "optional"
assets = [
    ["target/release/ntomb", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ntomb/", "644"],
]

# RPM package metadata (Fedora/RHEL/CentOS)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ntomb", dest = "/usr/bin/ntomb", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/ntomb/README.md", mode = "644" },
]
